test/spec_vectors/type-rec/ok/module_3.wat
(module (rec (type $ft (func)) (type (struct))) (func $f (type $ft)) (global (ref $ft) (ref.func $f)))