test/spec_vectors/type-rec/fail/module_6.wat
(module (rec (type (func)) (type $ft (func))) (func $f) (global (ref $ft) (ref.func $f)))